--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -7,7 +7,7 @@
         <button type="submit">Change</button>
     </form>
     <p>
-        <button *ngIf="authService.isLoggedIn" (click)="buy()">Buy Now</button>
+        <button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
         <button class="delete" (click)="remove(product)">Delete</button>
     </p>
 </div>
