Learning angular material

--- a/src/app/products/product-create/product-create.component.html
+++ b/src/app/products/product-create/product-create.component.html
@@ -1,40 +1,33 @@
 <form [formGroup]="productForm" (ngSubmit)="createProduct()">
     <div>
-        <label for="name">Name</label>
-        <input id="name" formControlName="name" required />
-        <span *ngIf="name.touched && name.invalid">
-            This name is not valid
-        </span>
+        <mat-form-field>
+            <input formControlName="name" placeholder="Name" [matAutocomplete]="productsAuto" required matInput />
+            <mat-error>The name is not valid</mat-error>
+        </mat-form-field>
     </div>
     <div>
-        <label for="price">Price</label>
-        <input id="price" formControlName="price" required />
-        <span *ngIf="price.touched && price.hasError('required')">
-            This price is required
-        </span>
-        <span *ngIf="price.touched && price.hasError('outOfRange')">
-            The price is out of range
-        </span>
-        <span *ngIf="showPriceRangeHint">
-            Price should be between 1 and 10000
-        </span>
+        <mat-form-field>
+            <input formControlName="price"  placeholder="Price" required matInput />
+            <mat-error>The price is required</mat-error>
+            <mat-hint>Price should be between 1 and 10000</mat-hint>
+        </mat-form-field>
+        <mat-autocomplete #productsAuto="matAutocomplete">
+            <mat-option *ngFor="let product of products$ | async" [value]="product.name">
+                {{product.name}}
+            </mat-option>
+        </mat-autocomplete>
     </div>
     <div>
-        <button type="submit" [disabled]="!productForm.valid">Create</button>
+        <mat-form-field>
+            <mat-label>Categories</mat-label>
+            <mat-select multiple>
+                <mat-option *ngFor="let category of categories" [value]="category">
+                    {{category}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+    </div>
+    <div>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!productForm.valid">Create</button>
     </div>
 </form>
-<!-- <form formGroupName="info">
-    <h2>Proeduct information</h2>
-    <div>
-        <label for="category">Category</label>
-        <input id="category" formControlName="category" />
-    </div>
-    <div>
-        <label for="descr">Description</label>
-        <input id="descr" formControlName="description"/>
-    </div>
-    <div>
-        <label for="photo">Photo URL</label>
-        <input id="photo" formControlName="image" />
-    </div>
-</form> -->
