--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<app-auth></app-auth>
-<a routerLink="/products" routerLinkActive="active">Products</a>
-<a routerLink="/cart" routerLinkActive="active">Cart</a>
-<a routerLink="/about" routerLinkActive="active">About Us</a>
+<mat-toolbar color="primary">
+    <span>Narae's e-shop</span>
+    <span class="spacer"></span>
+    <a mat-flat-button color="primary" routerLink="/products">Products</a>
+    <a mat-flat-button color="primary" routerLink="/cart">Cart</a>
+    <a mat-flat-button color="primary" routerLink="/about">About Us</a>
+    <app-auth></app-auth>
+</mat-toolbar>
 <router-outlet></router-outlet>
