--- a/src/app/auth/auth/auth.component.html
+++ b/src/app/auth/auth/auth.component.html
@@ -1,8 +1,8 @@
-<button
+<button mat-raised-button
     [hidden]="authService.isLoggedIn"
     (click)="authService.login().subscribe()"
 >Login</button>
-<button
+<button mat-raised-button
     [hidden]="!authService.isLoggedIn"
     (click)="authService.logout()"
 >Logout</button>
