--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -2,12 +2,9 @@
     <h2>Product Details</h2>
     <h3>{{product.name}}</h3>
     <span>{{product.price | currency: 'EUR'}}</span>
-    <form (ngSubmit)="changePrice(product, price!)">
-        <input placeholder="New price" name="price" [(ngModel)]="price" />
-        <button type="submit">Change</button>
-    </form>
+    <button mat-raised-button color="primary" (click)="changePrice(product)">Change</button>
     <p>
-        <button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
-        <button class="delete" (click)="remove(product)">Delete</button>
+        <button mat-button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
+        <button mat-raised-button color="primary" class="delete" (click)="remove(product)">Delete</button>
     </p>
 </div>
