--- a/src/styles.css
+++ b/src/styles.css
@@ -83,3 +83,6 @@ input.ng-dirty.ng-valid {
 input.ng-dirty.ng-invalid {
     border: 2px solid red;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
